--- a/bosa-noga/src/css/style.css
+++ b/bosa-noga/src/css/style.css
@@ -42,6 +42,7 @@ section {
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  overflow: hidden;
 }
 
 .col {
@@ -51,6 +52,10 @@ section {
 /* Common Styles */
 .invisible {
   opacity: 0;
+}
+
+.text-center {
+  align-self: center;
 }
 
 /* Header */
@@ -102,6 +107,8 @@ section {
 }
 
 .header-controls-pic {
+  flex-grow: 0;
+  flex-shrink: 0;
   width: 32px;
   height: 32px;
   margin: 0 10px;
@@ -243,11 +250,37 @@ section {
 
 /* Top Sales */
 .top-sales {
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
   min-height: 300px;
+}
+
+.col-3 {
+  width: 32%;
+}
+
+.card {
+  padding: 7px;
+  border: 1px solid grey;
+  border-radius: 7px;
+  -webkit-box-shadow: 0 5px 5px -5px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 0 5px 5px -5px rgba(34, 60, 80, 0.6);
+  box-shadow: 0 5px 5px -5px rgba(34, 60, 80, 0.6);
+}
+
+.img-fluid {
+  width: 100%;
+}
+
+.card-body {
+  padding: 14px;
 }
 
 /* Catalog */
 .catalog {
+  display: flex;
+  flex-direction: column;
   min-height: 600px;
 }
 
@@ -404,6 +437,7 @@ h2,
 /* Footer */
 
 .btn-outline-primary:hover {
+  color: white;
   background-color: #727e86;
   border-color: #727e86;
 }
