--- a/bosa-noga/src/css/style.css
+++ b/bosa-noga/src/css/style.css
@@ -29,25 +29,35 @@ a:hover {
 
 ul,
 li {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 section {
-  margin-top: 2em;
-  margin-bottom: 2em;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
   overflow: hidden;
 }
 
 .col {
   width: 100%;
+}
+
+.col-3 {
+  width: 30%;
+}
+
+.col-4 {
+  width: 24%;
 }
 
 /* Common Styles */
@@ -66,6 +76,12 @@ section {
   /* the last value defines transition-delay */
 }
 
+.shadow {
+  -webkit-box-shadow: 0 5px 5px -5px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 0 5px 5px -5px rgba(34, 60, 80, 0.6);
+  box-shadow: 0 5px 5px -5px rgba(34, 60, 80, 0.6);
+}
+
 /* Header */
 .navbar {
   display: flex;
@@ -73,6 +89,7 @@ section {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 .navbar-brand {
@@ -95,7 +112,7 @@ section {
 }
 
 .nav-item {
-  margin: 0.5rem;
+  margin: 0.5rem 1rem;
 }
 
 .header-controls {
@@ -263,6 +280,8 @@ section {
   flex-direction: column;
   max-width: 1200px;
   min-height: 300px;
+
+  /* margin-top: 0; */
 }
 
 .card {
@@ -414,7 +433,8 @@ section {
   color: #f00;
 }
 
-h2 {
+h2,
+.h2 {
   margin-top: 2em;
   margin-bottom: 1.5em;
 }
